@@ -2,6 +2,9 @@ Changes in Version 0.12
   o The groupequal, groupfree, fixpar and freepar functions can now handle multiple rows/columns for symmetric matrices
   o Fixed a bug in the identification function for ml_lvm models
   o Implemented min_sum argument for estimating Ising models on data with a minimum sum score due to selection bias. This method is further discussed in  Boot, de Ron, Haslbeck & Epskamp (in preperation). Correcting for selection bias after sum score selection in the Ising model.
+  o The 'warn_improper' argument in runmodel now defaults to FALSE, omitting the warning that a non-positive defnite matrix was encountered in parameter estimation.
+  o SEs are now set to NA if the Fischer information matrix could not be inverted normally
+  o Added an argument 'approximate_SEs' to runmodel to allow for SEs to be approximated using a pseudoinverse
 
 Changes in Version 0.11
   o Optimised lambda starting value choice
